birdwatching-setup/modules/web-server-instances/web-setup.tf
resource "aws_subnet" "private-subnets-for-web" {
  vpc_id            = var.vpc-id
  cidr_block        = var.private-subnets-for-web
  availability_zone = var.availability-zone
  tags = merge(var.common_tags, {
    Name = "private-${var.availability-zone}-web-${var.env}"
  })
}

resource "aws_route_table_association" "private-subnet-association-for-web" {
  subnet_id      = aws_subnet.private-subnets-for-web.id
  route_table_id = var.private-route-table-id
}

resource "aws_instance" "web" {
  associate_public_ip_address = false
  ami                         = var.web_ami_name
  count                       = 2
  instance_type               = var.instance-type
  vpc_security_group_ids      = [aws_security_group.web-server-security-group.id]
  subnet_id                   = aws_subnet.private-subnets-for-web.id
  key_name                    = var.public-jenkins-key
  user_data_replace_on_change = true
  iam_instance_profile        = aws_iam_instance_profile.photosaver-profile.name

  tags = merge(var.common_tags, {
    Name = "birdwatching-web-${var.env}"
  })
}

resource "aws_security_group" "web-server-security-group" {
  vpc_id = var.vpc-id
  name   = "web-security-group-${var.env}"

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 8300
    to_port     = 8302
    protocol    = "tcp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  ingress {
    from_port   = 8301
    to_port     = 8302
    protocol    = "udp"
    cidr_blocks = [var.vpc-cidr-block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_iam_role" "photosaver-role" {
  name = "photosaver-role-${var.env}"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        },
        Action = "sts:AssumeRole"
      }
    ]
  })

  tags = merge(var.common_tags, {
    Name = "photosaver-role-${var.env}"
  })
}

resource "aws_s3_bucket" "photos" {
  bucket = var.photos_bucket_name

  tags = merge(var.common_tags, {
    Name = "photos-bucket-${var.env}"
  })
}

resource "aws_s3_bucket_public_access_block" "photos" {
  bucket = aws_s3_bucket.photos.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_iam_role_policy" "photosaver-s3-policy" {
  name = "photosaver-s3-policy-${var.env}"
  role = aws_iam_role.photosaver-role.id

  policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Effect = "Allow"
        Action = [
          "s3:PutObject",
          "s3:GetObject",
          "s3:DeleteObject"
        ]
        Resource = "${aws_s3_bucket.photos.arn}/*"
      },
      {
        Effect = "Allow"
        Action = [
          "s3:ListBucket"
        ]
        Resource = aws_s3_bucket.photos.arn
      }
    ]
  })
}

resource "aws_iam_instance_profile" "photosaver-profile" {
  name = "photosaver-profile-${var.env}"
  role = aws_iam_role.photosaver-role.name
}

resource "aws_iam_role_policy_attachment" "photosaver_ssm_core" {
  role       = aws_iam_role.photosaver-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}
